# python-pratice

./: .gitignore  README.md  pyproject.toml  requirements.txt
03 - ChainMap from collection module/: user_maps.py
04 - Assignment expressions/: findimports.py  findimports2.py  user_literal.py
05 - Positional only parameters/: cat3.py
ch_01/01 - Writing first Dockerfile/: Dockerfile
ch_02/05-positional_only_parameters/: cat.py  cat2.py
ch_02/06-graphlib_module/: migrations.py
ch_02/07-development_mode/: crahser.py
ch_03/01_chainmap_from_collections_module/: user_maps.py
ch_03/02_assignment_expressions/: findimports.py  findimports2.py  user_literal.py  user_lteral2.py
ch_03/03_positional_only_parameters/: migrations.py
ch_04-object_oriented_programming/01_accessing_super_classes/: caseinsensitive.py
ch_04-object_oriented_programming/03_class_instance_initialization/: aggregator_shared.py
ch_04-object_oriented_programming/07_single_dispatch/: readme.md
ch_04-object_oriented_programming/08_dataclasses/: readme.md
ch_04/02_multiple_iheritance_and_method_resolution_order/: mro.py
ch_04/04_descriptors/: reveal_access.py
ch_04/05_real_life_example_lazily_evaluated_attributes/: lazily_evaluated.py  lazy_class_attribute.py  lazy_property.py
ch_04/06_dunder_methods/: matrices.py  readme.md
ch_05-interfaces_patterns_and_modularity/: readme.md
ch_06-concurrency/: readme.md
ch_17-deadlocks/: README.md  avoid_deadlock.py  example_deadlocks.py
ch_18-starvation/: README.md  __init__.py  avoid_starvation.py
ch_19_race_conditions/: README.md
(+61 files in other folders)
