[tool.poetry]
name = "python-pratice"
version = "0.1.0"
description = ""
authors = ["thienlb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyopengl = "^3.1.7"
zope-interface = "^6.4"
mypy = "^1.10.0"
flask = "^3.0.3"
redis = "^5.0.4"
injector = "^0.21.0"
flask-injector = "^0.15.0"
requests = "^2.31.0"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
blinker = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
